# miwi_backend

./: .gitignore  README.md  deploy-checksums.txt  deploy.sh  docker-compose.yml  pyproject.toml
app/: Dockerfile  auth.py  clip_func.py  main.py  schemas.py  token.py  twitch_data.py  twitch_func.py  user_func.py
app/database/: -models.py  db_connection.py
app/models/: __init__.py  challanges.py  clip.py  user.py
app/routes/: challenge.py  clip.py  user.py
app/utils/: display_client_data.py  time_tracking_logger.py
mysql/: Dockerfile  my.cnf
